<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".Admin">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/Text"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center_horizontal"
            android:text="@string/login_in_as_admin"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/PrimaryText"/>

        <EditText
            android:id="@+id/etA_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etA_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:tooltipText="15dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnA_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/login"
            android:textColor="@color/Text"/>

        <TextView
            android:id="@+id/tvA_ForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/forgot_your_password"
            android:textStyle="bold"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>